feat: add mark completed API
